fix: allow result tiles to wrap

--- a/src/pages/main-page/main-page.module.css
+++ b/src/pages/main-page/main-page.module.css
@@ -6,6 +6,7 @@
 
 .tiles {
   display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
   align-items: center;
   justify-content: center;
